--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,3 @@
-2010-05-27 Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+2010-05-27  Dmitry Dulepov <dmitry.dulepov@gmail.com>
 
-	* initial code generated with kickstarter
+	* Released version 0.1.0
